--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "license": "MIT",
   "scripts": {
     "prepublish": "tsc",
-    "test": "ts-node ./test/example.ts",
+    "test": "yarn build && ts-node ./test/example.ts",
     "build": "tsc"
   },
   "dependencies": {
+    "@types/discord-rpc": "^4.0.0",
     "discord-rpc": "^3.2.0"
   },
   "devDependencies": {
-    "@types/discord-rpc": "^3.0.5",
     "@types/node": "^14.14.35",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
